// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout rendering Should render correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#37597F",
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "flex-start",
    }
  }
>
  <Image
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "testUri": "../../../assets/images/everybet_logo.png",
      }
    }
    style={
      Object {
        "height": 39.25,
        "marginLeft": 25,
        "width": 138,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "flexDirection": "row",
        "height": 20,
        "justifyContent": "flex-start",
        "marginLeft": "auto",
        "width": 90,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/betcoin_icon.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "System",
          "fontSize": 10,
          "marginLeft": "auto",
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    >
      0
    </Text>
  </View>
  <Image
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "testUri": "../../../assets/images/user_placeholder.png",
      }
    }
    style={
      Object {
        "borderRadius": 20,
        "height": 40,
        "marginHorizontal": 15,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`layout rendering Should render correctly with a connected user 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#37597F",
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "flex-start",
    }
  }
>
  <Image
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "testUri": "../../../assets/images/everybet_logo.png",
      }
    }
    style={
      Object {
        "height": 39.25,
        "marginLeft": 25,
        "width": 138,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "flexDirection": "row",
        "height": 20,
        "justifyContent": "flex-start",
        "marginLeft": "auto",
        "width": 90,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/betcoin_icon.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "System",
          "fontSize": 10,
          "marginLeft": "auto",
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    >
      150
    </Text>
  </View>
  <Image
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "testUri": "../../../assets/images/user_placeholder.png",
      }
    }
    style={
      Object {
        "borderRadius": 20,
        "height": 40,
        "marginHorizontal": 15,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`layout rendering Should render correctly with a connected user and a custom avatar 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#37597F",
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "flex-start",
    }
  }
>
  <Image
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "testUri": "../../../assets/images/everybet_logo.png",
      }
    }
    style={
      Object {
        "height": 39.25,
        "marginLeft": 25,
        "width": 138,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "flexDirection": "row",
        "height": 20,
        "justifyContent": "flex-start",
        "marginLeft": "auto",
        "width": 90,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/betcoin_icon.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
    <Text
      style={
        Object {
          "fontFamily": "System",
          "fontSize": 10,
          "marginLeft": "auto",
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    >
      150
    </Text>
  </View>
  <Image
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "method": "GET",
        "uri": "avatar",
      }
    }
    style={
      Object {
        "borderRadius": 20,
        "height": 40,
        "marginHorizontal": 15,
        "width": 40,
      }
    }
  />
</View>
`;
